customNginx-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom-nginx-clusterip
spec:
  type: ClusterIP
  selector:
    app: custom-nginx
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
