customNginx-nodePort.yaml
apiVersion: v1
kind: Service
metadata: 
 name: custom-nginx-nodeport
spec:
  type: NodePort
  selector:
    app: custom-nginx
  ports:
    - port: 80
      targetPort: 80
