customNginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-resource
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: nginx.local
      http:
       paths: 
        - path: /
          pathType: Prefix
          backend:
           service:
             name: custom-nginx
             port: 
              number: 80
